--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "weather-cli",
-  "version": "1.0.0",
-  "description": "weather-cli",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
-  },
-  "keywords": [
-    "nodejs"
-  ],
-  "author": "Shehroz",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.20"
-  }
+	"name": "weather-cli",
+	"version": "1.0.0",
+	"description": "weather-cli project",
+	"main": "index.js",
+	"type": "module",
+	"scripts": {
+		"start": "node index.js",
+		"dev": "nodemon index.js"
+	},
+	"author": "Shehroz",
+	"license": "ISC",
+	"devDependencies": {
+		"nodemon": "^2.0.20"
+	},
+	"dependencies": {
+		"axios": "^1.2.1",
+		"chalk": "^5.2.0",
+		"dedent-js": "^1.0.1"
+	}
 }
